# datahugger-rs

./: .gitignore  Cargo.toml  README.md  dataone-repo-list.md  dataverse-repo-list.md  design.md  devenv.nix  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: ci-py.yaml  ci-rs.yaml  crate-publish.yaml  pypi-publish.yaml  release.yml
examples/: multiple-repos.rs
python/: Cargo.toml  README.md  datahugger.pyi  devenv.nix  pyproject.toml
python/datahugger/: __init__.py  datahugger.pyi
python/src/: lib.rs
python/tests/: test_default.py
src/: crawler.rs  dispatch.rs  download.rs  error.rs  filter.rs  helper.rs  lib.rs  main.rs  ops.rs  repo.rs  repo_impl.rs  resolver.rs
src/datasets/: arxiv.rs  dataone.rs  dataverse.rs  dryad.rs  github.rs  hal.rs  huggingface.rs  local.rs  mod.rs  osf.rs  zenodo.rs
