[package]
name = "datahugger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-recursion = "1.1.1"
bytes = "1.11.0"
digest = "0.10.7"
futures-util = "0.3.31"
hex = "0.4.3"
md-5 = "0.10.6"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
serde = "1.0.228"
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "tracing"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.8"
