[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "datahugger-ng"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "python binding of datahugger -- rust tool for fetching data and metadata from DOI or URL."
readme = "README.md"
dynamic = ["version"]
license = "MIT AND Apache-2.0"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."

[dependency-groups]
dev = ["pip", "pytest>=8.0.2", "pytest-asyncio>=1.3", "ruff>=0.8.0", "pre-commit>=4.0.1", "ipython"]
