[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "datahugger-ng"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "python binding of datahugger -- rust tool for fetching data and metadata from DOI or URL."
readme = "README.md"
dynamic = ["version"]
license = "MIT AND Apache-2.0"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
include = ["py.typed", "*.pyi"]

[dependency-groups]
dev = [
    "pip",
    "pytest>=8.0.2",
    "pytest-asyncio>=1.3",
    "ruff>=0.8.0",
    "pre-commit>=4.0.1",
    "ipython",
    "mypy==1.19.1",
    "requests>=2.32.5",
    "types-requests",
]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["tests.*"]
strict = false
disallow_untyped_defs = false
disallow_untyped_calls = false
# disallow_any_unimported = false

[[tool.mypy.overrides]]
module = "datahugger.*"

